--- a/src/main/resources/com/tonyguerra/ytplayer/primary.fxml
+++ b/src/main/resources/com/tonyguerra/ytplayer/primary.fxml
@@ -1,18 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
+<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/"
-   xmlns:fx="http://javafx.com/fxml/"
-   fx:controller="com.tonyguerra.ytplayer.controllers.PrimaryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+   prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/"
+   xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" />
+      <VBox prefHeight="400.0" prefWidth="676.0" AnchorPane.bottomAnchor="0.0"
+         AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox style="-fx-border-color: transparent transparent white transparent;">
+               <children>
+                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true"
+                     preserveRatio="true">
+                     <image>
+                        <Image url="@images/java-icon.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </ImageView>
+                  <VBox>
+                     <children>
+                        <Label text="YT Player">
+                           <font>
+                              <Font size="1.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="text-white" />
+                              <String fx:value="title" />
+                           </styleClass>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Label>
+                        <Label text="com.tonyguerra.ytplayer">
+                           <styleClass>
+                              <String fx:value="text-white" />
+                              <String fx:value="regular-text" />
+                           </styleClass>
+                        </Label>
+                     </children>
+                     <HBox.margin>
+                        <Insets top="5.0" />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+            </HBox>
+            <VBox alignment="CENTER" style="-fx-border-color: #333;">
+               <children>
+                  <Label maxWidth="1.7976931348623157E308" style="-fx-font-size: 30px;"
+                     text="COLE A URL ABAIXO" textAlignment="CENTER">
+                     <styleClass>
+                        <String fx:value="title" />
+                        <String fx:value="text-center" />
+                        <String fx:value="text-white" />
+                     </styleClass>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField styleClass="text-field-custom">
+                     <VBox.margin>
+                        <Insets left="70.0" right="70.0" />
+                     </VBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </TextField>
+                  <Button mnemonicParsing="false" prefWidth="200.0" style="-fx-font-weight: bold;"
+                     text="Pesquisar">
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="20.0" />
+                     </VBox.margin>
+                     <styleClass>
+                        <String fx:value="button-custom" />
+                        <String fx:value="regular-text" />
+                     </styleClass>
+                  </Button>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets left="50.0" right="50.0" top="20.0" />
+               </VBox.margin>
+            </VBox>
+         </children>
+      </VBox>
    </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</VBox>
+   <stylesheets>
+      <URL value="@styles/fonts.css" />
+      <URL value="@styles/main.css" />
+   </stylesheets>
+</AnchorPane>
